[tool.poetry]
name = "password-smelter"
version = "1.1.0"
description = "A password analyzer with pretty graphs and a dark mode"
authors = ["TheTechromancer"]
license = "GPL-3.0"
repository = "https://github.com/TheTechromancer/password-smelter"
homepage = "https://github.com/TheTechromancer/password-smelter"

[tool.poetry.scripts]
password-smelter = 'password_smelter.smelter:main'

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
dash = "^2.0"
plotly = "^5.0"
dash-bootstrap-components = "^1.0"
XlsxWriter = "^3.0"
psutil = "^6.0"
tabulate = "^0.9"
password-stretcher = "^1.0.4"
numpy = "^2.0"
kaleido = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
